--- a/.vitepress/theme/style/overrides.scss
+++ b/.vitepress/theme/style/overrides.scss
@@ -100,7 +100,7 @@ table {
 }
 .dark .VPContent {
   background-color: rgb(10, 10, 11);
-  background-image: url('/grid.svg');
+  background-image: url('/images/grid.svg');
 }
 .dark .vp-doc a:hover,
 .dark .vp-doc a > code:hover {
